--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
         </div>
       </div>
 
-      <p>
+      <p class="col-wide">
         É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, 
         cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos 
         genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico
       </p>
 
-      <img src="/img/wolf1.jpg" alt="Wolf 1">
+      <img class="imagem-1" src="/img/wolf1.jpg" alt="Wolf 1">
 
       <p>
         É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, 
         cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.
       </p>
 
-      <img src="/img/wolf2.jpg" alt="Wolf 2">
+      <img class="imagem-2" src="/img/wolf2.jpg" alt="Wolf 2">
 
       <p>
         O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a
@@ -77,7 +77,7 @@
         Canadá,[8] e na antiga União Soviética.
       </p>
 
-      <blockquote class="citacao">
+      <blockquote class="citacao col-wide">
         <p>
           “Há algo no uivar do lobo que tira um homem do aqui e agora e o 
           transporta para uma floresta da mente.”
@@ -107,7 +107,7 @@
         </p>
     </div>
 
-      <img src="/img/wolf3.jpg" alt="Wolf 3">
+      <img class="imagem-3 col-wide" src="/img/wolf3.jpg" alt="Wolf 3">
     </main>
 
     <aside class="anuncios">
